Fix layout overflow

--- a/src/styles/_partials/_navbar.sass
+++ b/src/styles/_partials/_navbar.sass
@@ -4,8 +4,9 @@
   height: 65px
 
 nav
-  background: #171717
+  overflow: hidden
   height: 65px
+  background: #171717
 
   &.fixed
     position: fixed
