--- a/src/styles/_partials/_section.sass
+++ b/src/styles/_partials/_section.sass
@@ -1,6 +1,4 @@
 section
-  height: 100%
-  width: 100%
   text-align: center
 
   .title
